<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#2196F3"
    android:foregroundTint="#FFFFFF"
    android:id="@+id/mainActivity"
    tools:context=".MainActivity">


    <!--Below is are the UI Elements of the first Activity-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="224dp"
        android:contentDescription="@string/backgroundsvg"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/wave" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="499dp"
        android:alpha="0.7"
        android:contentDescription="@string/summer"
        android:fitsSystemWindows="false"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pngwing_com__43_" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="188dp"
        android:layout_height="140dp"
        android:contentDescription="@string/luggage"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@drawable/pngwing_com" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coiny"
        android:text="@string/summerTrip"
        android:textAlignment="center"
        android:textColor="#FB8C00"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276" />


    <!--Below are the text views that take the information from the user-->
    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:ems="10"
        android:fontFamily="@font/coiny"
        android:hint="@string/nameField"
        android:inputType="textPersonName"
        android:shadowColor="#673AB7"
        android:textAlignment="viewStart"
        android:autofillHints=""
        android:textColorHint="#FB8C00"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#5E35B1"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:backgroundTint="#3F51B5"
        android:ems="10"
        android:fontFamily="@font/coiny"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:shadowColor="#673AB7"
        android:textAlignment="viewStart"
        android:textColor="#B61A1A"
        android:textColorHint="#FB8C00"
        android:textSize="18sp"
        android:textStyle="bold"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editTextPersonName" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/coiny"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="#43A047"
        android:textColorHint="#FB8C00"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dropDownWidth="wrap_content"
        android:entries="@array/sexGroup"
        android:foreground="@drawable/wave"
        android:foregroundGravity="fill_vertical|fill"
        android:spinnerMode="dropdown"
        android:textAlignment="inherit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmailAddress" />


    <!--This button handles submitting the profile information, calling the new activity and
        passing the values of the profile information to it-->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:backgroundTint="#FFB300"
        android:elevation="16dp"
        android:fontFamily="@font/coiny"
        android:foregroundTint="#3F51B5"
        android:hapticFeedbackEnabled="true"
        android:shadowColor="#3F51B5"
        android:text="@string/Button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.34" />

</androidx.constraintlayout.widget.ConstraintLayout>